--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -3,12 +3,11 @@
 *@
 @{
 }
-<hi>Forgot Password</hi>
+<h1>Forgot Password</h1><p></p>
 
-<form method="post" asp-action="ChangePassword">
-    <input name="email" type="text" />
-@*    <input name="password" type="text" />
-*@    <input name="baru" type="text" />
+<form method="post" asp-action="ForgotPassword">
+    Email <input name="email" type="text" /><p></p>
+    Password Baru <input name="passbaru" type="text" /<p></p>
 
-    <button type="submit">Create</button>
+    <button type="submit">Submit </button>
 </form>
