--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -3,12 +3,12 @@
 *@
 @{
 }
-<hi>Register</hi>
+<h1>Register</h1><p></p>
 
 <form method="post" asp-action="Register">
-    <input name="FullName" type="text" />
-    <input name="Email" type="text" />
-    <input name="BirthDate" type="date" />
-    <input name="Password" type="text" />
+    Full Name   <input name="FullName" type="text" /><p></p>
+    Email       <input name="Email" type="text" /><p></p>
+    DoB         <input name="BirthDate" type="date" /><p></p>
+    Password    <input name="Password" type="text" /><p></p>
     <button type="submit">Create</button>
 </form>
