--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,13 +1,21 @@
-﻿@*
+﻿@model ProjectApp.ViewModel.LoginResponse;
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
+@{ 
     ViewData["Title"] = "Login";
 }
-<hi>Login</hi>
+
+<h1>Login</h1>
 
 <form method="post" asp-action="Login">
     Email <input name="email" type="text" /><p></p>
     Password <input name="password" type="text" /><p></p>
-    <button type="submit">Create</button>
+    <button type="submit">Log In</button>
+
 </form>
+
+
+
+
